Removed some test borders and fixed horizontal scroll bar appearing for no reason

--- a/src/screens/Main/_main.scss
+++ b/src/screens/Main/_main.scss
@@ -62,7 +62,6 @@
             &-container {
                 overflow: hidden;
                 position: relative;
-                border: 1px solid red;
             }
         }
 
